[package]
name = "cargo-refix"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.25", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.9"
colored = "2.0"
similar = { version = "2.2", features = ["inline", "unicode"] }

[dev-dependencies]
tempfile = "3.8"
